--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react": "^0.13.3",
+    "request": "^2.55.0",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.9.0"
   }
