parsing direction api response

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-loader": "^2.2.0",
     "react": "^0.13.3",
     "request": "^2.55.0",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.9.0"
   }
